--- a/uninstall_feedback.html
+++ b/uninstall_feedback.html
@@ -19,6 +19,8 @@
     }
 
     // 函数用于自动提交 platform 和 profile 使用 Fetch API
+
+    // 自动提交 platform 和 profile 的函数
     async function autoSubmitPlatformProfile() {
       const params = getQueryParams();
       const platform = params.platform || '';
@@ -27,24 +29,42 @@
       // 仅在存在 platform 和 profile 时提交
       if (platform && profile) {
         try {
+          // 使用 URLSearchParams 来格式化表单数据
+          const formData = new URLSearchParams();
+          formData.append('platform', platform);
+          formData.append('profile', profile);
+
           const response = await fetch('https://formspree.io/f/myzkjero', {
             method: 'POST',
             headers: {
-              'Content-Type': 'application/json'
+              'Content-Type': 'application/x-www-form-urlencoded'
             },
-            body: JSON.stringify({
-              platform: platform,
-              profile: profile
-            })
+            body: formData.toString(),
+            redirect: 'manual' // 防止 fetch 自动跟随重定向
           });
 
-          if (response.ok) {
+          if (response.status === 200 || response.status === 201) {
             console.log('Platform and Profile successfully submitted.');
+            // 显示感谢消息
+            const thankYouMessage = document.createElement('p');
+            thankYouMessage.textContent = 'Thank you for your feedback!';
+            thankYouMessage.style.color = 'green';
+            document.body.prepend(thankYouMessage);
           } else {
             console.error('Failed to submit Platform and Profile:', response.statusText);
+            // 显示错误消息
+            const errorMessage = document.createElement('p');
+            errorMessage.textContent = 'There was an error submitting your data. Please try again later.';
+            errorMessage.style.color = 'red';
+            document.body.prepend(errorMessage);
           }
         } catch (error) {
           console.error('Error submitting Platform and Profile:', error);
+          // 显示错误消息
+          const errorMessage = document.createElement('p');
+          errorMessage.textContent = 'There was an error submitting your data. Please try again later.';
+          errorMessage.style.color = 'red';
+          document.body.prepend(errorMessage);
         }
       }
     }
