--- a/uninstall_feedback.html
+++ b/uninstall_feedback.html
@@ -71,7 +71,7 @@
 
     // 在页面加载完成后自动提交
     window.addEventListener('DOMContentLoaded', () => {
-      autoSubmitPlatformProfile();
+    //  autoSubmitPlatformProfile();
     });
   </script>
 </head>
